1.2.4
- Fixed song length when importing MIDIs with multiple time signatures
- Added support for horizontal mouse wheel scrolling (wxWidgets 2.9.1+ only)
- Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI
- Provide graphical warnings when a MIDI file cannot be perfectly loaded
- Code cleanup and unit tests

1.2.3
- Added metronome feature
- Fixed extra silence being inserted at end of exported midi file, preventing looping
- Fixed glitch with drum name when loading .aria file
- Fixed keyboard focus not brought back to main pane after showing "Select Notes" dialog
- Fixed clicking on track header of drum editor unselects notes
- Fixed measures appearing unselected when right-clicking on them
- Fixed printing bug where notes appeared in the wrong measure
- Fixed wrong time sig change being selected after adding a time sig effect
- Fixed Shift+left/Shift+right when multiple time sig changes are used
- More code cleanup

1.2.2
- Support for custom keys (e.g. for street organs)
    - Added ability to save user-defined key presets
    - Support for disabling notes (e.g. if your instrument cannot play all notes)
- Fixed octave numbers in keyboard editor and guitar editor
- More flexible printing dialog; allows changing the printing notation type for each track
- Menu icons on Linux/Windows (thanks to Alexis Archambault for coding this!)
- Keyroll printing
- Fixed bug that caused wrong sequence to be closed when pressing "X" on an unselected tab
- Improved sequence is selected after closing a sequence
- Loading MIDI files is now fast again
- Fixed hanging if a warning message is hsown when opening a file
- Much code cleanup, documentation and refactoring

1.2.1
- Fixed printing of accidentals

1.2
- Printing
    - Improved printing dialog
    - Give access to page setup dialog
    - Show progress dialog while calculating print layout
    - Print song tempo