@@ -14,6 +14,7 @@
 - Added support for horizontal mouse wheel scrolling (wxWidgets 2.9.1+ only)<br/>
 - Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI<br/>
 - Provide graphical warnings when a MIDI file cannot be perfectly loaded<br/>
+- Don't exit when save dialog is cancelled<br/>
 - Code cleanup and unit tests<br/><br/>
 
 <hr/>
